[package]
name = "simple_rust_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "client"] }
reqwest = "0.11"
tokio = { version = "1.33.0", features = ["full"] }